bugfix for bg images on mobile

--- a/css/style2.css
+++ b/css/style2.css
@@ -162,11 +162,11 @@ ul, ol {
     background-attachment: fixed;
 }
 
-/*@media only screen and (max-width: 767px) {*/
-    /*.bg-img {*/
-        /*background-attachment: scroll;*/
-    /*}*/
-/*}*/
+@media only screen and (max-width: 767px) {
+    .bg-img {
+        background-attachment: scroll;
+    }
+}
 
 .bg-img .overlay {
     position: absolute;
